--- a/Chat-Socket/public/index.html
+++ b/Chat-Socket/public/index.html
@@ -23,10 +23,12 @@
                 </header>
                 <div class="card-content">
                     <div class="content">
+                        <div class="tags are-medium" id='tags' style="flex-direction: column; align-items: flex-start">
+                        </div>
                     </div>
                 </div>
                 <footer class="card-footer is-4">
-                    <form action="javascript:;" method="post" style="width: 100%; padding: 15px">
+                    <form action="javascript:;" method="post" style="width: 100%; padding: 15px" onsubmit="ClickBtn()">
                         <div class="field">
                             <p class="control">
                                 <input class="input" type="text" placeholder="User" required id="user" />
